[tool.poetry]
name = "catspace-bot"
version = "0.1.0"
description = ""
authors = ["kiriharu <me@kiriha.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
transformers = "^4.41.2"
torch = "^2.3.1"
aiosqlite = "^0.20.0"
yoyo-migrations = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
